<resources>
    <string name="app_name_debug">动次_Debug</string>
    <string name="net_error">服务器忙，请稍后再试</string>
    <string name="hintErrorDataDelayTry">数据错误，请稍后重试</string>
    <string name="hintVideoNotExist">视频不存在</string>
    <string name="stringLoadingData">正在加载数据，请稍候…</string>
    <string name="stringReload">点击重新加载</string>
    <string name="stringNetworkError">网络错误</string>
    <string name="stringSplashCopyright">Copyright © %s Welines.cn All Rights Reserved</string>
    <string name="string_recycler_loading">正在加载…</string>
    <string name="string_recycler_pull_to_load">上拉加载更多</string>
    <string name="string_recycler_no_more">没有更多啦~</string>
    <string name="string_recycler_load_failed">加载失败，点击重新加载</string>
    <string name="socialWechatNotInstall">微信未安装</string>
    <string name="socialWechatRegisterFail">微信注册失败</string>
    <string name="socialWechatLoginFail">微信登录失败</string>
    <string name="socialWechatAuthCancel">微信登录取消</string>
    <string name="socialWechatAuthDenied">微信登录授权被拒绝</string>
    <string name="socialWechatShareOk">微信分享成功</string>
    <string name="socialWechatShareDenied">微信分享被拒绝</string>
    <string name="socialWechatShareCancel">微信分享取消</string>
    <string name="tabChat">聊天</string>
    <string name="tabProduct">作品</string>
    <string name="tabFans">粉丝</string>
    <string name="tabLike">赞</string>
    <string name="conform">确认</string>
    <string name="attention">关注</string>
    <string name="chat">私信</string>
    <string name="comment">评论</string>
    <string name="likeandfans">粉丝和赞</string>
    <string name="stringSwitchEnvironment">当前是%1$s环境\n点击切换到%2$s环境</string>
    <string name="main">首页</string>
    <string name="shoot">拍摄</string>
    <string name="mine">我的</string>
    <string name="recommend_video">推荐</string>
    <string name="attention_video">关注</string>
    <string name="new_video">最新</string>
    <string name="discover">发现</string>
    <string name="send_comment">发送</string>
    <string name="send_comment_count">评论（256）</string>
    <string name="comment_delete">删除</string>
    <string name="comment_delete_succeed">删除成功</string>
    <string name="comment_delete_cancel">取消</string>
    <string name="comment_null">暂无评论，快来抢沙发</string>
    <string name="copy_succeed">复制成功</string>
    <string name="comment_hint">喜欢就要说出来..</string>
    <string name="stringWorkDeleted">作品已删除</string>
    <string name="comment_content_length_limit">已超过文字上限</string>
    <string name="publish_succeed">发布成功</string>
    <string name="send_sms_code">验证码</string>
    <string name="sms_code_send_succeed">验证码发送成功</string>
    <string name="mobile_input_hint">请输入手机号</string>
    <string name="send_sms_code_input_hint">请输入验证码</string>
    <string name="login_introduction">使用验证码可直接登录</string>
    <string name="login">登录</string>
    <string name="login_dialog_title">登录才能操作哦～</string>
    <string name="login_rule_hint">登录/注册默认同意 《动次用户使用条款》</string>
    <string name="dialog_loading">加载中...</string>
    <string name="login_suc">登录成功</string>
    <string name="login_failure">登录失败</string>
    <string name="login_lost">登录已失效，请重新登录</string>
    <string name="verify_dialog_title">请输入邀请码</string>
    <string name="verify_dialog_activate">激活</string>
    <string name="user_nick_name">昵称</string>
    <string name="user_input_nick_name">请输入昵称</string>
    <string name="user_sex_information">* 性别选择后不可更改！</string>
    <string name="user_sex_information_edit">* 性别更改请联系客服！</string>
    <string name="user_sex">性别</string>
    <string name="user_sex_boy">男</string>
    <string name="user_sex_girl">女</string>
    <string name="user_brithday">生日</string>
    <string name="user_choice_brithday">点击选择生日</string>
    <string name="user_city">城市</string>
    <string name="user_auth">认证</string>
    <string name="userWeiboHome">微博主页</string>
    <string name="user_city_location">动次星球</string>
    <string name="user_autograph">个性签名</string>
    <string name="user_input_autograph">请输入个性签名</string>
    <string name="user_input_nick_name_null">昵称不能为空哦~</string>
    <string name="user_get_into">进入</string>
    <string name="user_constellation">摩羯水瓶双鱼白羊金牛双子巨蟹狮子处女天秤天蝎射手魔羯</string>
    <string name="user_year">年</string>
    <string name="user_month">月</string>
    <string name="user_day">日</string>
    <string name="user_edit_tip">编辑资料</string>
    <string name="user_edit_save">保存</string>
    <string name="user_edit_header">头像</string>
    <string name="user_signature">我还没有写签名(0^0)...</string>
    <string name="account_nickname_too_long">您输入的昵称过长哦</string>
    <string name="account_sign_too_long">个性签名不能超过24个字</string>
    <string name="user_focus_normal">关注</string>
    <string name="user_follower">已关注</string>
    <string name="user_unfollower">取消关注</string>
    <string name="user_exit_login">退出登录</string>
    <string name="dialog_focus_tip">确定不再关注此人?</string>
    <string name="dialog_draftbox_tip">是否删除草稿?</string>
    <string name="user_block">拉黑</string>
    <string name="user_unblock">解除拉黑</string>
    <string name="user_already_block">你已将此用户拉黑</string>
    <string name="user_block_confirm">确定将此用户拉黑？</string>
    <string name="user_unblock_confirm">确定将此用户解除拉黑？</string>
    <string name="user_report">举报</string>
    <string name="user_report_1">低俗内容</string>
    <string name="user_report_2">违法行为</string>
    <string name="user_report_3">垃圾广告</string>
    <string name="user_report_4">其他原因</string>
    <string name="user_report_suc">已举报成功</string>
    <string name="user_logout">确定退出吗?</string>
    <string name="user_add_friend_title">添加好友</string>
    <string name="user_add_friend_qq">添加QQ好友</string>
    <string name="user_add_friend_wechat">添加微信好友</string>
    <string name="user_add_friend_sina">添加微博好友</string>
    <string name="setting_cleared_memory">缓存已清除</string>
    <string name="user_location_ttitle">所在城市</string>
    <string name="user_draftbox_title">草稿箱</string>
    <string name="user_default_constellation">无名星</string>
    <string name="user_id">动次ID:%1$s</string>
    <string name="dialog_personal_save_title">是否保存修改?</string>
    <string name="dialog_personal_save_positive">保存</string>
    <string name="dialog_personal_save_negative">放弃</string>
    <string name="save_suc">保存成功</string>
    <string name="save_failure">保存失败</string>
    <string name="user_no_opus">[点+开拍] 开始拍摄你的第一个动次短视频</string>
    <string name="user_no_opus_other">你还没发布任何作品哦~</string>
    <string name="user_no_like_opus">你赞过的作品都会放到这里</string>
    <string name="user_other_no_opus">TA还没发布任何作品哦~</string>
    <string name="user_other_no_like_opus">TA还没喜欢任何作品哦~</string>
    <string name="user_other_together_opus">TA还没有踹轨的作品哦~</string>
    <string name="user_together_opus">你还没有踹轨的作品哦~</string>
    <string name="user_home_focus">你还没关注任何人...</string>
    <string name="user_home_fans">帅气的你既然没有粉丝？</string>
    <string name="user_other_home_focus">TA还没关注任何人...</string>
    <string name="user_other_home_fans">TA还没有粉丝...</string>
    <string name="user_account_tips">账户</string>
    <string name="user_zuanshi_tips">钻石</string>
    <string name="user_zuanshi_tt_tips">余额(钻石)</string>
    <string name="user_hongbao_tips">可领红包(元)</string>
    <string name="user_jinbi_tips">分贝</string>
    <string name="user_charge_tips">充值</string>
    <string name="user_duihuan_tips">兑换</string>
    <string name="user_earnings_tips">收益</string>
    <string name="user_choose_tips">请选择充值金额</string>
    <string name="user_choose_pay_tips">请选择支付方式</string>
    <string name="user_ali_pay_tips">请选择支付方式</string>
    <string name="user_ali_pay">支付宝支付</string>
    <string name="user_wechat_pay">微信支付</string>
    <string name="user_wechat_num_tips_1">领取红包或优惠充值请关注官方微信公众号：</string>
    <string name="user_wechat_num_tips_2">dongci-app</string>
    <string name="user_wechat_num_tips_3">(点击复制)</string>
    <string name="user_charge_list_null">充值列表为空</string>
    <string name="user_duihuan_list_null">兑换列表为空</string>
    <string name="user_duihuan_succeed">兑换成功</string>
    <string name="stringDraftCount">草稿箱(%1$d)</string>
    <string name="setting_title">设置</string>
    <string name="setting_clear_memory">清理缓存</string>
    <string name="setting_clear_memory_dialog">确定清理缓存?</string>
    <string name="setting_common">给动词好评</string>
    <string name="setting_about">关于我们</string>
    <string name="use_help">使用帮助</string>
    <string name="stringBlankList">黑名单</string>
    <string name="setting_protocol">用户协议</string>
    <string name="setting_network_check">网络诊断</string>
    <string name="setting_network_check_default_tips">当视频/内容无法成功加载时,可以使用网络诊断功能,并上传诊断结果,帮助我们提升服务质量~</string>
    <string name="msg_maxi_capacity">已达到照片选择上限</string>
    <string name="commit">确定</string>
    <string name="commit_num">确定(%1$d/%2$d)</string>
    <string name="photos_num">%1$d张</string>
    <string name="msg_no_camera">没找到摄像头</string>
    <string name="save_flag">保存</string>
    <string name="photo_title">选择图片</string>
    <string name="cut_title">裁剪图片</string>
    <string name="share_suc">分享成功</string>
    <string name="share_faid">分享失败</string>
    <string name="share_cancel">取消分享</string>
    <string name="share_wechat_no_installed">请先安装微信客户端</string>
    <string name="share_sina_no_installed">请先安装微博客户端</string>
    <string name="share_title">%1s给你发了一段视频，快点开看看，嘴上说不要，手却很诚实~</string>
    <string name="share_text">动次——原创音乐短视频社区!</string>
    <string name="share_weibo_text">动次——原创音乐短视频社区!</string>
    <string name="share_url">http://www.wmlives.com/icpwww/dongci.html</string>
    <string name="subject_description_hit_content">简单描述一下话题</string>
    <string name="subject_limit_count_content">限制60字</string>
    <string name="subject_surplus_count_content" formatted="true">还可以输入%1s字</string>
    <string name="stringTabUser">用户</string>
    <string name="stringTabTopic">话题</string>
    <string name="stringTabMusic">音乐</string>
    <string name="stringQQ">QQ</string>
    <string name="stringCopyUrl">复制链接</string>
    <string name="stringSaveToGallery">保存本地</string>
    <string name="stringReport">举报</string>
    <string name="stringDelete">删除</string>
    <string name="stringManager">管理</string>
    <string name="stringWeibo">微博</string>
    <string name="stringCircle">朋友圈</string>
    <string name="stringWeChat">微信</string>
    <string name="stringMyCollect">我的收藏</string>
    <string name="stringHotSong">热门</string>
    <string name="stringPopSong">流行</string>
    <string name="stringElectronicSong">电音</string>
    <string name="stringEuropeSong">欧美</string>
    <string name="stringJapanSong">日韩</string>
    <string name="stringAmazingSong">洗脑神曲</string>
    <string name="stringKawaii">萌萌</string>
    <string name="stringUploadVideo">上传视频</string>
    <string name="stringSelectMusic">选择音乐</string>
    <string name="stringCapture">直接开拍</string>
    <string name="stringHeiheiId">动次ID:%1$s  粉丝:%2$d</string>
    <string name="stringWorkCount">%d作品</string>
    <string name="stringJoinCount">%d人参与</string>
    <string name="stringUseCount">%d人使用</string>
    <string name="stringInitiator">发起人:%s</string>
    <string name="stringJoinTopic">参与话题</string>
    <string name="stringUseMusic">使用该音乐录制</string>
    <string name="stringClickForDetail">更多</string>
    <string name="stringTopic">话题</string>
    <string name="stringMusic">音乐</string>
    <string name="stringScanningVideo">正在扫描手机视频...</string>
    <string name="stringMobileNetworkHint">当前使用的是移动网络，是否继续播放视频？</string>
    <string name="stringEdit">编辑</string>
    <string name="stringChangeTitle">更改标题</string>
    <string name="stringChangePermission">更改权限</string>
    <string name="user_sign_born">选择出生日期，系统将会自动转换成星座</string>
    <string name="confirm">确定</string>
    <string name="upload_video">上传视频</string>
    <string name="record_by_music">使用音乐录制</string>
    <string name="record_only">直接开拍</string>
    <string name="draftbox_list">草稿箱demo</string>
    <string name="cancel">取消</string>
    <string name="hintAuth">独有标识，彰显不同身份</string>
    <string name="hintBindWeibo">绑定后将在个人主页显示</string>
</resources>