<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.wmlive.hhvideo.heihei.mainhome.activity.MainActivity">


    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnRecordMusic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/record_by_music"
            android:textSize="@dimen/text_size_16"/>

        <Button
            android:id="@+id/btnRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/record_only"
            android:textSize="@dimen/text_size_16"/>

        <Button
            android:id="@+id/btnUploadVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/upload_video"
            android:textSize="@dimen/text_size_16"/>

        <Button
            android:id="@+id/btnGraft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/draftbox_list"
            android:textSize="@dimen/text_size_16"/>
    </LinearLayout>


    <FrameLayout
        android:id="@+id/fl_DraftBoxFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>