<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hh_color_a"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/t44dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/city_choose_cancle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:paddingLeft="@dimen/t10dp"
            android:paddingRight="@dimen/t10dp"
            android:text="@string/cancel"
            android:textColor="@color/hh_color_c"
            android:textSize="@dimen/t15sp" />

        <TextView
            android:id="@+id/city_choose_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/user_sign_born"
            android:textColor="@color/hh_color_b"
            android:textSize="@dimen/t11sp" />

        <TextView
            android:id="@+id/city_choose_ok"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:paddingLeft="@dimen/t10dp"
            android:paddingRight="@dimen/t10dp"
            android:text="@string/confirm"
            android:textColor="@color/hh_color_c"
            android:textSize="@dimen/t15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/bg_cover_light_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <com.wmlive.hhvideo.heihei.personal.widget.wheel.WheelView
            android:id="@+id/city_choose_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.wmlive.hhvideo.heihei.personal.widget.wheel.WheelView
            android:id="@+id/city_choose_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.wmlive.hhvideo.heihei.personal.widget.wheel.WheelView
            android:id="@+id/city_choose_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>